example/errors/lexer/more_than_one_char_literal.box
set x: char = 'abcde';
set y: char = 'abfcde';
